src/test/deca/context/valid/objet/methodParam.deca
class A {
    void method(int x, float y) {}
}
