src/test/deca/context/invalid/method_with_void_param_type.deca
/*
    Description : paramètre de type void dans une méthode

    Résultat : Erreur contextuelle
*/
class A{
    void x(void y){

    }
}
